// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controlpanels renders a controlpanels component 1`] = `
<div
  className="view-wrapper"
>
  <div
    className="ui container controlpanel"
  >
    <div
      className="ui raised segments"
    >
      <div
        className="ui segment primary"
      >
        Site Setup
      </div>
      <div
        className="ui secondary segment"
      >
        General
      </div>
      <div
        className="ui attached segment"
      >
        <div
          className="ui six column grid"
        >
          <div
            className="row"
          >
            <div
              className="column"
            >
              <a
                href="/controlpanel/date-and-time"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Date and Time
                  </div>
                </h3>
              </a>
            </div>
            <div
              className="column"
            >
              <a
                href="/controlpanel/lang"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Language
                  </div>
                </h3>
              </a>
            </div>
            <div
              className="column"
            >
              <a
                href="/controlpanel/addons"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Add-Ons
                  </div>
                </h3>
              </a>
            </div>
            <div
              className="column"
            >
              <a
                href="/controlpanel/database"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Database
                  </div>
                </h3>
              </a>
            </div>
            <div
              className="column"
            >
              <a
                href="/controlpanel/undo"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Undo
                  </div>
                </h3>
              </a>
            </div>
            <div
              className="column"
            >
              <a
                href="/controlpanel/aliases"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    URL Management
                  </div>
                </h3>
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ui secondary segment"
      >
        Content
      </div>
      <div
        className="ui attached segment"
      >
        <div
          className="ui six column grid"
        >
          <div
            className="row"
          >
            <div
              className="column"
            >
              <a
                href="/controlpanel/editing"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Editing
                  </div>
                </h3>
              </a>
            </div>
            <div
              className="column"
            >
              <a
                href="/controlpanel/rules"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Content Rules
                  </div>
                </h3>
              </a>
            </div>
            <div
              className="column"
            >
              <a
                href="/controlpanel/moderate-comments"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Moderate Comments
                  </div>
                </h3>
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ui secondary segment"
      >
        Security
      </div>
      <div
        className="ui attached segment"
      >
        <div
          className="ui six column grid"
        >
          <div
            className="row"
          >
            <div
              className="column"
            >
              <a
                href="/controlpanel/security"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Security
                  </div>
                </h3>
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ui secondary segment"
      >
        Users
      </div>
      <div
        className="ui attached segment"
      >
        <div
          className="ui six column grid"
        >
          <div
            className="row"
          >
            <div
              className="column"
            >
              <a
                href="/controlpanel/users"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Users
                  </div>
                </h3>
              </a>
            </div>
            <div
              className="column"
            >
              <a
                href="/controlpanel/usergroupmembership"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    User Group Membership
                  </div>
                </h3>
              </a>
            </div>
            <div
              className="column"
            >
              <a
                href="/controlpanel/groups"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Groups
                  </div>
                </h3>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ui raised segments"
    >
      <div
        className="ui segment primary"
      >
        Version Overview
      </div>
      <div
        className="ui attached segment"
      />
    </div>
  </div>
  <div
    id="Portal"
  />
</div>
`;

exports[`Controlpanels renders an additional control panel 1`] = `
<div
  className="view-wrapper"
>
  <div
    className="ui container controlpanel"
  >
    <div
      className="ui raised segments"
    >
      <div
        className="ui segment primary"
      >
        Site Setup
      </div>
      <div
        className="ui secondary segment"
      >
        Add-on Configuration
      </div>
      <div
        className="ui attached segment"
      >
        <div
          className="ui six column grid"
        >
          <div
            className="row"
          >
            <div
              className="column"
            >
              <a
                href="/controlpanel/manage-myaddon-foo"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Foo Management
                  </div>
                </h3>
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ui secondary segment"
      >
        General
      </div>
      <div
        className="ui attached segment"
      >
        <div
          className="ui six column grid"
        >
          <div
            className="row"
          >
            <div
              className="column"
            >
              <a
                href="/controlpanel/addons"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Add-Ons
                  </div>
                </h3>
              </a>
            </div>
            <div
              className="column"
            >
              <a
                href="/controlpanel/database"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Database
                  </div>
                </h3>
              </a>
            </div>
            <div
              className="column"
            >
              <a
                href="/controlpanel/undo"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Undo
                  </div>
                </h3>
              </a>
            </div>
            <div
              className="column"
            >
              <a
                href="/controlpanel/aliases"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    URL Management
                  </div>
                </h3>
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ui secondary segment"
      >
        Content
      </div>
      <div
        className="ui attached segment"
      >
        <div
          className="ui six column grid"
        >
          <div
            className="row"
          >
            <div
              className="column"
            >
              <a
                href="/controlpanel/rules"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Content Rules
                  </div>
                </h3>
              </a>
            </div>
            <div
              className="column"
            >
              <a
                href="/controlpanel/moderate-comments"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Moderate Comments
                  </div>
                </h3>
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ui secondary segment"
      >
        Users
      </div>
      <div
        className="ui attached segment"
      >
        <div
          className="ui six column grid"
        >
          <div
            className="row"
          >
            <div
              className="column"
            >
              <a
                href="/controlpanel/users"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Users
                  </div>
                </h3>
              </a>
            </div>
            <div
              className="column"
            >
              <a
                href="/controlpanel/usergroupmembership"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    User Group Membership
                  </div>
                </h3>
              </a>
            </div>
            <div
              className="column"
            >
              <a
                href="/controlpanel/groups"
                onClick={[Function]}
              >
                <h3
                  className="ui icon center aligned header"
                >
                  <svg
                    className="icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": undefined,
                      }
                    }
                    onClick={null}
                    style={
                      Object {
                        "fill": "currentColor",
                        "height": "48px",
                        "width": "auto",
                      }
                    }
                    viewBox=""
                    xmlns=""
                  />
                  <div
                    className="content"
                  >
                    Groups
                  </div>
                </h3>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ui raised segments"
    >
      <div
        className="ui segment primary"
      >
        Version Overview
      </div>
      <div
        className="ui attached segment"
      />
    </div>
  </div>
  <div
    id="Portal"
  />
</div>
`;
